# qvac-fabric-llm.cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  convert_hf_to_gguf.py  dflash_bench_humaneval.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-apple.yml  build-cann.yml  build-cpu.yml  build-cross.yml  build-sanitize.yml  build-sycl.yml  build-vulkan.yml  build-webgpu.yml  build.yml  ui-build-self-hosted.yml  ui-self-hosted.yml
bench/speed-bench/: plot_bench.py  run_all.sh  run_dflash_k_sweep.py  run_mtp_k_sweep.py  setup.sh
ci/: run.sh
cmake/: download-models.cmake
common/: CMakeLists.txt  arg.cpp  chat.cpp  chat.h  common.cpp  common.h  dflash-gpu-log.cpp  dflash-gpu-log.h  dflash-profile.cpp  dflash-profile.h  dflash-speculative.cpp  dflash-speculative.h  nvtx_helper.h  sampling.cpp  speculative.cpp  speculative.h
common_test/: CMakeLists.txt
conversion/: bitnet.py
docs/: gemma4-vulkan-encoder-analysis.md  speculative.md  turbovec-integration-plan.md  vector-index.md
examples/: CMakeLists.txt
examples/embedding/: CMakeLists.txt
examples/speculative-dflash/: CMakeLists.txt  README.md  speculative-dflash.cpp
examples/speculative-simple/: CMakeLists.txt  speculative-simple.cpp
examples/training/: CMakeLists.txt  README.md  finetune-lora.cpp  finetune.cpp
ggml/: CMakeLists.txt  ggml-vector-index.pc.in  ggml.pc.in
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-rpc.h  ggml-vector-index.h  ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-meta.cpp  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-common.h  ggml-opt.cpp  ggml-quants.c  ggml-quants.h  ggml-tbq-quants.c  ggml-tbq-quants.h  ggml-tbq-types.h  ggml-vector-index-avx2.cpp  ggml-vector-index-avx2.h  ggml-vector-index-internal.h  ggml-vector-index-metal.h  ggml-vector-index-metal.mm  ggml-vector-index-persistence.cpp  ggml-vector-index-search.cpp  ggml-vector-index-sources.cmake  ggml-vector-index-turbovec.cpp  ggml-vector-index.cpp  ggml.c  gguf.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ggml-omp-shim.c  ggml-omp-shim.h  ops.cpp  ops.h  (+5 more)
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  copy_from_quant.comp  copy_to_quant.comp  dequant_funcs.glsl  dequant_funcs_cm2.glsl  dequant_tbq3_0.comp  dequant_tbq4_0.comp  dflash_conv_state_history_select.comp  dflash_conv_state_history_select_tree.comp  flash_attn.comp  flash_attn_base.glsl  flash_attn_cm1.comp  flash_attn_cm2.comp  gated_delta_net.comp  gated_delta_net_back.comp  gated_delta_net_state_select.comp  gated_delta_net_state_select_tree.comp  gelu_back.comp  generic_binary_head.glsl  l2_norm_back.comp  mul_mat_id_back_a.comp  mul_mat_id_back_b.comp  mul_mat_vec_tbq3_0.comp  mul_mat_vec_tbq4_0.comp  mul_mat_vec_tq2_0.comp  mul_mat_vecq_funcs.glsl  mul_mm_funcs.glsl  mul_mm_tbq_qjl_correction.comp  norm.comp  sigmoid_back.comp  ssm_conv_back_c.comp  ssm_conv_back_sx.comp  ssm_conv_tree.comp  tq_utils.comp  types.glsl  vulkan-shaders-gen.cpp
ggml/src/ggml-vulkan/vulkan-shaders/turbo-quant/: copy_to_quant.glsl  dequant_funcs.glsl  dequant_funcs_cm2.glsl  flash_attn.glsl  flash_attn_base.glsl  types.glsl
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
include/: llama-cpp.h  llama.h
requirements/: requirements-convert_hf_to_gguf.txt  requirements-tool_bench.txt
scripts/: compute_tq_codebooks.py  dflash_bench_cold.sh  dflash_bench_cold_draftpr.sh  dflash_bench_cpu.sh  dflash_bench_diff.py  dflash_bench_humaneval.py  dflash_bench_render.py  dflash_bench_vs_lucebox.sh  dflash_gdn_history_sweep.sh  dflash_gdn_history_sweep_vulkan.sh  dflash_perf_record.sh  gen_dflash_oracle.py
scripts/hip/: gcn-cdna-vgpr-check.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-impl.h  llama-io.h  llama-kv-cache-dsa.cpp  llama-kv-cache-dsa.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-lora-training.cpp  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-load.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama.cpp
src/models/: delta-net-base.cpp  dflash.cpp  gemma4.cpp  llama.cpp  models.h  qwen3.cpp  qwen35.cpp  qwen35moe.cpp  qwen3moe.cpp  qwen3next.cpp  qwen3vl-moe.cpp  qwen3vl.cpp  qwen3vlmoe.cpp
tests/: .gitignore  CMakeLists.txt  bench-vector-index.cpp  kv_cache_bench_common.sh  kv_cache_eval_common.py  leval-bench.sh  leval-prepare.py  leval-score.py  longbench-bench.sh  longbench-score.py  niah-bench.sh  niah-prepare.py  niah-score.py  test-backend-ops.cpp  test-clip-fa-cutoff.cpp  test-dflash-correctness.sh  test-dflash-numerics.cpp  test-kv-cache-leval.py  test-kv-cache-longbench.py  test-kv-cache-niah.py  test-kv-cache-quantization-perp.sh  test-kv-cache-ruler.py  test-kv-cache-zeroscrolls.py  test-kv-cache.cpp  test-kv-cells.cpp  test-memory-keep-positions.cpp  test-mtmd-c-api.c  test-opencl-fa-chunking.cpp  test-quantize-fns.cpp  test-rope.cpp  test-turboquant.sh  test-vector-index-faults.cpp  test-vector-index.cpp  turbovec-golden-dim256-q2.inc  turbovec-golden-dim256-q4.inc  turbovec-golden-q2.inc  turbovec-golden-q4.inc  zeroscrolls-bench.sh  zeroscrolls-prepare.py  zeroscrolls-score.py
tests/turbovec-golden-gen/: Cargo.toml
tools/: CMakeLists.txt
tools/cli/: README.md
tools/gguf-split/: gguf-split.cpp
tools/llama-bench/: llama-bench.cpp
tools/mtmd/: CMakeLists.txt  README.md  clip-impl.h  clip-model.h  clip.cpp  clip.h  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-image.cpp  mtmd-image.h  mtmd.cpp  mtmd.h
tools/server/: README.md  server-context.cpp
tools/ui/: package-lock.json  package.json
tools/vector-index-bench/: CMakeLists.txt  bench-vector-index.cpp
(+28 files in other folders)
